Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18797

SizeOfRawData of BSS section should not be processed

    XMLWordPrintable

Details

    Description

      Microsoft Linker 1.00 writes BSS.SizeOfRawData with data in IMAGE_OPTIONAL_HEADER.SizeOfUninitializedData, but it doesn't mean there is really data inside as PointerToRawData is 0.

       

      A VC1 compiled DLL attached for reference.

      Attachments

        Issue Links

          Activity

            People

              roytam1 roytam1
              roytam1 roytam1
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: