[NTOS:MM] Ignore sections either PointerToRawData or SizeOfRawData is zero

VC1 Linker fills BSS.SizeOfRawData with data in IMAGE_OPTIONAL_HEADER.SizeOfUninitializedData but keeps PointerToRawData to zero.

CORE-18797